# P2P-server-client-chat-system

./: .gitignore  CMakeLists.txt  README.md  README.txt
client/: CMakeLists.txt  cli  client.c  client.h  greeting.c  greeting.h  main.c  main.h  messaging.c  messaging.h
server/: CMakeLists.txt  main.c  main.h  ser  server.c  server.h
shared/: CMakeLists.txt  utils.c  utils.h
